tests/jballerina-unit-test/src/test/resources/test-src/bala/test_bala/types/finite_type_negative_test.bal
import finitetypetest/finite_type_project;

function testNullFiniteType() {
    finite_type_project:Bar _ = "null"; // error
}
